[project]
name = "july"
version = "0.0.1"
description = "Create beautiful heatmaps of daily data."
authors = ["Edvard Hultén <edvard.hulten@gmail.com>"]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = ""
repository = ""
documentation = ""

keywords = ["heatmap", "visualisation", "calendar", "daily"]
classifiers = ["Topic :: Scientific/Engineering :: Visualization"]

[dependencies]


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"